Added feature where energy chunks are propogated through the energy systems if visibility is turned on after energy flow has started.
# 0.00.37 (72532) Mar 18, 2013
3/18/13 Deploy to dev for use in interviews.
Fixed an issues where the electrical energy chunks could get jammed up or even stuck on the solar panel after a reset of the tab.
Made the beaker's heating and cooling rate dependent upon the presence of thermal energy chunks when in "energy chunk visible" mode.
Made the light bulbs not appear to radiate light until energy chunks are present when in "energy chunk visible" mode.
# 0.00.35 (72520) Mar 18, 2013
3/18/13 Deploying for possible use in interviews.
Fixed a problem with odd E-chunk behavior when cooling is in progress (most visible from beaker) and fast-forward is enabled.
# 0.00.34 (72509) Mar 16, 2013
3/16/13 Deploy to dev for testing and review
Fixed some issues with z-order of the thermometer panel when interacting with the beaker.
Added logic to allow stacks of blocks to exchange energy with air as soon as max temperature is reached, even if temperature differential is below min for energy exchange with air.
Fixed an issue where the steam temperature was zero at startup and was affecting the thermometer readings when it shouldn't.
Added thresholds around overlap detection error messages so that they are not printed out when floating point calculations lead to minor unexpected overlaps.
Added code to prevent any overlap between block edges (due to perspective) and the beaker when beaker is being moved.
Fixed issues where blocks and beakers could be dragged into/over one another under some circumstances.
Addressed z-order issues with left side of burner by preventing blocks and beaker from being able to get close enough that problem is visible.
Prevented beakers and block from being dragged over the burners - the burners now act as blocking objects.